[gd_scene load_steps=8 format=3 uid="uid://dxwxaupmhagbo"]

[ext_resource type="Script" uid="uid://c8acika7wo4ks" path="res://shared/buildings/room_generator.gd" id="1_es016"]
[ext_resource type="Script" uid="uid://c1g0luxm2m8e3" path="res://shared/buildings/models_placer.gd" id="2_38cd7"]
[ext_resource type="Script" uid="uid://uq2ee3iq6x08" path="res://shared/buildings/room_generation_params.gd" id="2_cx44q"]
[ext_resource type="MeshLibrary" uid="uid://ckd7c5gdp3gum" path="res://shared/buildings/assets/placeholder_room_tiles.tres" id="4_vqaaw"]
[ext_resource type="Script" uid="uid://cst72aujrwdww" path="res://shared/buildings/neighbor_generator.gd" id="7_3emm2"]
[ext_resource type="Script" uid="uid://c28te8ulweb57" path="res://shared/buildings/cell_generator.gd" id="7_53oh1"]

[sub_resource type="Resource" id="Resource_cqvhj"]
script = ExtResource("2_cx44q")
entrance_count = 3
window_percentage = 0.897
metadata/_custom_type_script = "uid://baeps41mlt1vr"

[node name="RoomGenerator" type="Node3D"]
script = ExtResource("1_es016")
generation_params = SubResource("Resource_cqvhj")

[node name="ModelsPlacer" type="Node" parent="." node_paths=PackedStringArray("floor_grid", "wall_x_grid", "wall_z_grid")]
script = ExtResource("2_38cd7")
mesh_library = ExtResource("4_vqaaw")
floor_grid = NodePath("../FloorGridMap")
wall_x_grid = NodePath("../WallXGrid")
wall_z_grid = NodePath("../WallZGrid")

[node name="CellGenerator" type="Node" parent="."]
script = ExtResource("7_53oh1")

[node name="NeighborGenerator" type="Node" parent="."]
script = ExtResource("7_3emm2")

[node name="FloorGridMap" type="GridMap" parent="."]
mesh_library = ExtResource("4_vqaaw")
cell_size = Vector3(2, 2.8, 2)
cell_center_y = false
cell_scale = 2.0

[node name="WallXGrid" type="GridMap" parent="."]
mesh_library = ExtResource("4_vqaaw")
cell_size = Vector3(2, 2.8, 2)
cell_center_y = false
cell_scale = 2.0
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="WallZGrid" type="GridMap" parent="."]
mesh_library = ExtResource("4_vqaaw")
cell_size = Vector3(2, 2.8, 2)
cell_center_y = false
cell_scale = 2.0
metadata/_editor_floor_ = Vector3(0, 0, 0)
